[gd_scene load_steps=40 format=2]

[ext_resource path="res://assets/theme/fonts/bolt_hud_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/textures/glow_light.png" type="Texture" id=2]
[ext_resource path="res://game/bolt/sprite_edge_light_thin.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/burst_light.png" type="Texture" id=4]
[ext_resource path="res://game/bolt/Thrust.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/textures/atlas_arena_objects.png" type="Texture" id=6]
[ext_resource path="res://assets/sounds/sfx/_pa/burst/hit_wall_dizzy_NFF-dizzyness.wav" type="AudioStream" id=7]
[ext_resource path="res://game/bolt/Bolt.gd" type="Script" id=8]
[ext_resource path="res://assets/sounds/sfx/_pa/last_beat.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/theme/main_theme.tres" type="Theme" id=10]
[ext_resource path="res://assets/sounds/_zaloga/hit1___614185__bruhitybruh__car-door-smash-snare-kick.wav" type="AudioStream" id=11]
[ext_resource path="res://game/bolt/BoltShadow.gd" type="Script" id=12]
[ext_resource path="res://assets/sounds/sfx/engine_start___62564__lonemonk__1951-mercury-warm-start-and-idle.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/sfx/engine___62564__lonemonk__1951-mercury-warm-start-and-idle.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/sfx/engine_revup___62564__lonemonk__1951-mercury-warm-start-and-idle.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sounds/sfx/_pa/burst/burst.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sounds/sfx/_pa/skills/skilled_frcer.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sounds/sfx/hit_stray_v2.wav" type="AudioStream" id=18]
[ext_resource path="res://game/bolt/BoltHud.gd" type="Script" id=19]
[ext_resource path="res://game/bolt/sprite_bolt.png" type="Texture" id=20]
[ext_resource path="res://game/bolt/sprite_turret.png" type="Texture" id=21]
[ext_resource path="res://game/bolt/sprite_edge_thin.png" type="Texture" id=22]
[ext_resource path="res://assets/resources/icons/icon_mina.tres" type="Texture" id=23]
[ext_resource path="res://assets/resources/icons/icon_misile.tres" type="Texture" id=24]
[ext_resource path="res://assets/resources/icons/icon_shocker.tres" type="Texture" id=25]
[ext_resource path="res://assets/resources/icons/icon_bullet.tres" type="Texture" id=26]
[ext_resource path="res://game/bolt/sprite_scars.png" type="Texture" id=27]
[ext_resource path="res://game/bolt/gun_smoke_particles_material.tres" type="Material" id=28]
[ext_resource path="res://game/bolt/sprite_thrust_light.png" type="Texture" id=29]
[ext_resource path="res://game/bolt/Gun.gd" type="Script" id=30]

[sub_resource type="PhysicsMaterial" id=5260]
friction = 0.5
bounce = 0.2

[sub_resource type="ViewportTexture" id=5264]
viewport_path = NodePath("ShadowViewport")

[sub_resource type="RectangleShape2D" id=5254]
extents = Vector2( 6.5, 6 )

[sub_resource type="AtlasTexture" id=5255]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 8, 8 )

[sub_resource type="AudioStreamRandomPitch" id=5256]
audio_stream = ExtResource( 18 )

[sub_resource type="AudioStreamRandomPitch" id=5257]
audio_stream = ExtResource( 11 )

[sub_resource type="AudioStreamRandomPitch" id=5258]
audio_stream = ExtResource( 16 )
random_pitch = 1.05

[sub_resource type="CanvasItemMaterial" id=5261]

[sub_resource type="CanvasItemMaterial" id=5262]
blend_mode = 1

[node name="TheBolt" type="RigidBody2D"]
z_index = 1
collision_layer = 7
mass = 30.0
physics_material_override = SubResource( 5260 )
contacts_reported = 1
contact_monitor = true
angular_damp = 8.0
script = ExtResource( 8 )
__meta__ = {
"_edit_vertical_guides_": [ 12.0 ]
}

[node name="BoltController" type="Node" parent="."]

[node name="TrailPosition" type="Position2D" parent="."]
position = Vector2( -33, 0 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="Light2D2" type="Light2D" parent="."]
visible = false
position = Vector2( -1.90735e-06, -9.53674e-07 )
texture = ExtResource( 2 )
color = Color( 1, 0.627451, 0, 0.290196 )
energy = 1.28
range_z_min = 0
range_z_max = 0

[node name="ShadowViewport" type="Viewport" parent="."]
size = Vector2( 320, 320 )
own_world = true
transparent_bg = true
handle_input_locally = false
msaa = 4
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="DriveTrain" type="Node2D" parent="ShadowViewport"]
show_behind_parent = true
position = Vector2( 160, 160 )
scale = Vector2( 3.333, 3.333 )

[node name="FrontEngine" type="Node2D" parent="ShadowViewport/DriveTrain"]

[node name="ThrustL" parent="ShadowViewport/DriveTrain/FrontEngine" instance=ExtResource( 5 )]
position = Vector2( 18, -12 )

[node name="ThrustR" parent="ShadowViewport/DriveTrain/FrontEngine" instance=ExtResource( 5 )]
position = Vector2( 18, 12 )
position_on_bolt = 1

[node name="RearEngine" type="Node2D" parent="ShadowViewport/DriveTrain"]

[node name="ThrustL" parent="ShadowViewport/DriveTrain/RearEngine" instance=ExtResource( 5 )]
position = Vector2( -17, -12 )

[node name="ThrustR" parent="ShadowViewport/DriveTrain/RearEngine" instance=ExtResource( 5 )]
position = Vector2( -17, 12 )
position_on_bolt = 1

[node name="BoltSprite" type="Sprite" parent="ShadowViewport"]
position = Vector2( 160, 160 )
texture = ExtResource( 20 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.243137 )
scale = Vector2( 0.3, 0.3 )
texture = SubResource( 5264 )
script = ExtResource( 12 )
shadow_casting_node_path = NodePath("../BoltSprite")

[node name="DriveTrain" type="Node2D" parent="."]

[node name="FrontEngine" type="Node2D" parent="DriveTrain"]

[node name="FrontPin" type="PinJoint2D" parent="DriveTrain/FrontEngine"]
position = Vector2( 18, 0 )
node_a = NodePath("../../..")
node_b = NodePath("../RigidBody2D")

[node name="RigidBody2D" type="RigidBody2D" parent="DriveTrain/FrontEngine"]
position = Vector2( 18, 0 )
gravity_scale = 0.0
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DriveTrain/FrontEngine/RigidBody2D"]
shape = SubResource( 5254 )
disabled = true

[node name="Polygon2D" type="Polygon2D" parent="DriveTrain/FrontEngine/RigidBody2D/CollisionShape2D"]
visible = false
show_behind_parent = true
position = Vector2( 14, 19 )
offset = Vector2( -20, -19 )
polygon = PoolVector2Array( -19.5, 10, -19.5, -10, 31.5, -10, 31.5, 10 )

[node name="ThrustL" parent="DriveTrain/FrontEngine" instance=ExtResource( 5 )]
position = Vector2( 18, -12 )

[node name="ThrustR" parent="DriveTrain/FrontEngine" instance=ExtResource( 5 )]
position = Vector2( 18, 12 )
position_on_bolt = 1

[node name="RearEngine" type="Node2D" parent="DriveTrain"]

[node name="RearPin" type="PinJoint2D" parent="DriveTrain/RearEngine"]
position = Vector2( -24, 0 )
node_a = NodePath("../../..")
node_b = NodePath("../RigidBody2D")

[node name="RigidBody2D" type="RigidBody2D" parent="DriveTrain/RearEngine"]
position = Vector2( -24, 0 )
gravity_scale = 0.0
can_sleep = false
linear_damp = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DriveTrain/RearEngine/RigidBody2D"]
shape = SubResource( 5254 )
disabled = true

[node name="Polygon2D" type="Polygon2D" parent="DriveTrain/RearEngine/RigidBody2D/CollisionShape2D"]
visible = false
show_behind_parent = true
position = Vector2( 14, 19 )
offset = Vector2( -20, -19 )
polygon = PoolVector2Array( -19.5, 10, -19.5, -10, 31.5, -10, 31.5, 10 )

[node name="ThrustL" parent="DriveTrain/RearEngine" instance=ExtResource( 5 )]
position = Vector2( -17, -12 )

[node name="ThrustR" parent="DriveTrain/RearEngine" instance=ExtResource( 5 )]
position = Vector2( -17, 12 )
position_on_bolt = 1

[node name="BoltSprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 20 )
offset = Vector2( 0.381001, 0.499999 )

[node name="BoltHud" type="Node2D" parent="."]
visible = false
script = ExtResource( 19 )

[node name="BoltHudLines" type="VBoxContainer" parent="BoltHud"]
margin_left = -3.0
margin_right = 3.0
margin_bottom = 3.0
grow_horizontal = 2
rect_min_size = Vector2( 6, 0 )

[node name="EnergyBar" type="Control" parent="BoltHud/BoltHudLines"]
margin_left = 1.0
margin_right = 7.0
margin_bottom = 1.0
grow_horizontal = 2
rect_min_size = Vector2( 6, 1 )
size_flags_horizontal = 4

[node name="Undi" type="Polygon2D" parent="BoltHud/BoltHudLines/EnergyBar"]
position = Vector2( -0.5, 0 )
color = Color( 0.32549, 0.356863, 0.407843, 0.54902 )
polygon = PoolVector2Array( 0.5, 0, 0.5, 1, 6.5, 1, 6.5, 0 )

[node name="Bar" type="Polygon2D" parent="BoltHud/BoltHudLines/EnergyBar"]
position = Vector2( -0.5, 0 )
color = Color( 0.847059, 0.0235294, 0.0235294, 1 )
polygon = PoolVector2Array( 0.5, 0, 0.5, 1, 6.5, 1, 6.5, 0 )

[node name="WeaponSelector" type="Control" parent="BoltHud/BoltHudLines"]
margin_top = 5.0
margin_right = 8.0
margin_bottom = 13.0
rect_min_size = Vector2( 8, 8 )
size_flags_horizontal = 4

[node name="Weapons" type="HBoxContainer" parent="BoltHud/BoltHudLines/WeaponSelector"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -4.0
margin_right = 4.0
margin_bottom = 8.0
grow_horizontal = 2
theme = ExtResource( 10 )
custom_constants/separation = 2

[node name="IconBullet" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons"]
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 26 )

[node name="IconEdge" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconBullet"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
size_flags_horizontal = 4
texture = SubResource( 5255 )

[node name="Label" type="Label" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconBullet"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_right = 42.0
margin_bottom = 20.0
grow_horizontal = 2
rect_min_size = Vector2( 48, 0 )
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 1 )
text = "0000"
align = 1

[node name="IconMisile" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons"]
margin_left = 10.0
margin_right = 18.0
margin_bottom = 8.0
texture = ExtResource( 24 )

[node name="IconEdge" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconMisile"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
size_flags_horizontal = 4
texture = SubResource( 5255 )

[node name="Label" type="Label" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconMisile"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_right = 42.0
margin_bottom = 20.0
grow_horizontal = 2
rect_min_size = Vector2( 48, 0 )
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 1 )
text = "0000"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="IconMina" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons"]
margin_left = 20.0
margin_right = 28.0
margin_bottom = 8.0
texture = ExtResource( 23 )

[node name="IconEdge" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconMina"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
size_flags_horizontal = 4
texture = SubResource( 5255 )

[node name="Label" type="Label" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconMina"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_right = 42.0
margin_bottom = 20.0
grow_horizontal = 2
rect_min_size = Vector2( 48, 0 )
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 1 )
text = "0000"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="IconShocker" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons"]
margin_left = 30.0
margin_right = 38.0
margin_bottom = 8.0
texture = ExtResource( 25 )

[node name="IconEdge" type="TextureRect" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconShocker"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
size_flags_horizontal = 4
texture = SubResource( 5255 )

[node name="Label" type="Label" parent="BoltHud/BoltHudLines/WeaponSelector/Weapons/IconShocker"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -6.0
margin_right = 42.0
margin_bottom = 20.0
grow_horizontal = 2
rect_min_size = Vector2( 48, 0 )
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = ExtResource( 1 )
text = "0000"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="SelectorTimer" type="Timer" parent="BoltHud/BoltHudLines/WeaponSelector"]
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="EngineStart" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 13 )
bus = "GameSfx"

[node name="EngineRevup" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 15 )
bus = "GameSfx"

[node name="Engine" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 14 )
bus = "GameSfx"

[node name="HitWall" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 5256 )
volume_db = -15.0
pitch_scale = 0.7
bus = "GameSfx"

[node name="HitWall2" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 5257 )
volume_db = -15.0
pitch_scale = 0.85
bus = "GameSfx"

[node name="HitMisile" type="AudioStreamPlayer" parent="Sounds"]
stream = SubResource( 5258 )
volume_db = -10.0
bus = "GameSfx"

[node name="Dizzy" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = -20.0
bus = "GameSfx"

[node name="Shocked" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 17 )
volume_db = -25.0
bus = "GameSfx"

[node name="Heartbeat" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
pitch_scale = 1.1
bus = "GameSfx"

[node name="FrontEnginePositionL" type="Position2D" parent="."]
position = Vector2( 24, -8 )
__meta__ = {
"_edit_group_": true,
"_gizmo_extents_": 2.0
}

[node name="FrontEnginePositionR" type="Position2D" parent="."]
position = Vector2( 24, 8 )
__meta__ = {
"_edit_group_": true,
"_gizmo_extents_": 2.0
}

[node name="RearEnginePosition" type="Position2D" parent="."]
position = Vector2( -24, -8 )
__meta__ = {
"_edit_group_": true,
"_gizmo_extents_": 2.0
}

[node name="GunPosition" type="Position2D" parent="."]
position = Vector2( 40, 0 )
__meta__ = {
"_edit_group_": true,
"_gizmo_extents_": 2.0
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -34, -12, -30, -15, -14, -17, 22, -17, 30, -15, 32, -12, 32, 12, 30, 15, 22, 17, -14, 17, -30, 15, -34, 12 )

[node name="ReviveTimer" type="Timer" parent="."]

[node name="DirectionLine" type="Line2D" parent="."]
visible = false
position = Vector2( 26, 0 )
points = PoolVector2Array( 0, 0, 100, 0 )
width = 4.0

[node name="SpriteEdgeLight" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.541176, 0.262745, 1 )
material = SubResource( 5261 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 22 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( -1.90735e-06, -9.53674e-07 )
scale = Vector2( 2.26562, 1.13281 )
texture = ExtResource( 4 )
texture_scale = 0.2
color = Color( 1, 0.47451, 0.215686, 0.498039 )
energy = 0.94
range_z_min = 0
range_z_max = 2

[node name="SpriteEdgeLight2" type="Light2D" parent="."]
visible = false
material = SubResource( 5261 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
color = Color( 1, 0.576471, 0.0823529, 1 )
energy = 1.3

[node name="SpriteScars" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.458824 )
material = SubResource( 5262 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 27 )

[node name="SpriteTurret" type="Sprite" parent="."]
position = Vector2( -16, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 21 )
script = ExtResource( 30 )

[node name="GunParticles" type="Particles2D" parent="SpriteTurret"]
show_behind_parent = true
position = Vector2( 32, -1 )
rotation = 3.14159
lifetime = 0.2
explosiveness = 0.5
randomness = 1.0
process_material = ExtResource( 28 )
texture = ExtResource( 29 )

[node name="GunPosition" type="Position2D" parent="SpriteTurret"]
position = Vector2( 30, -1.90735e-05 )
scale = Vector2( 10, 10 )
__meta__ = {
"_edit_group_": true,
"_gizmo_extents_": 2.0
}

[node name="ReloadTimer" type="Timer" parent="SpriteTurret"]

[connection signal="body_entered" from="." to="." method="_on_Bolt_body_entered"]
[connection signal="timeout" from="BoltHud/BoltHudLines/WeaponSelector/SelectorTimer" to="BoltHud" method="_on_SelectorTimer_timeout"]
[connection signal="timeout" from="ReviveTimer" to="." method="_on_ReviveTimer_timeout"]
[connection signal="timeout" from="SpriteTurret/ReloadTimer" to="SpriteTurret" method="_on_ReloadTimer_timeout"]
